Fix overflow auto setting so it only applies to content and not to right side content

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,20 +55,22 @@ button{
   /*TODO make scrollable*/
   display: block;
   height: 100vh;
-  overflow: auto;
   background-size: 100%;
   background-image: url(image-path('content-background.jpg'));
   background-repeat:no-repeat;
   background-size: cover;
   -moz-background-size: cover;  /* Firefox 3.6 */
   background-position: center;  /* Internet Explorer 7/8 */
+  overflow: hidden;
 }
 
 #content{
   float: left;
   display: block;
+  height: 100%;
   width: 100%;
   padding: 15px;
+  overflow: auto;
 }
 
 .hidden {
